# perfaction

./: .gitmodules  build-all-share.sh  build-all.sh  meson.build  meson_options.txt  runExample.sh
.github/workflows/: build_test.yml  lottie-expressions-compare-branches.yml  lottie-expressions-compare-hard-shared.yml  lottie-expressions-compare-hard-thread4.yml  lottie-expressions-compare-hard-threadn.yml  lottie-expressions-compare-hard-threads_false.yml  lottie-expressions-compare-hard.yml  lottie-expressions-compare-hard2.yml  lottie-expressions-compare.yml  lottie-expressions-light.yml  lottie-expressions-matrix.yml  ubuntu-binary-size-compare.yml  ubuntu-binary-size-merge.yml  ubuntu-binary-size.yml  ubuntu-lottie-expressions-compare.yml
docs/plans/: 2026-04-03-github-actions-matrix-design.md  2026-04-03-github-actions-matrix.md
src/: DragDrop.cpp  Example.h  meson.build
