option('threads',
  type: 'boolean',
  value: true,
  description: 'Enable the multi-threading task scheduler in thorvg')

# Option for selecting thorvg subproject
option('thorvg_subproject',
  type: 'combo',
  choices: ['thorvg','thorvg-nors', 'thorvg-main', 'thorvg-feature','thorvg-main-feature', 'thorvg-feature-remove'],
  value: 'thorvg',
  description: 'Select thorvg subproject (thorvg, thorvg-main, thorvg-main-feature, thorvg-feature-remove)')

option('thorvg_linkage',
  type: 'combo',
  choices: ['static', 'shared'],
  value: 'static',
  description: 'Select ThorVG linkage type for the subproject')

option('example_tick_count',
  type: 'integer',
  value: 5000,
  min: 1,
  description: 'Set the tick count at which FPS example runs exit')
